display form with grid instead of flexbox to fix flex-wrap problem

--- a/style.css
+++ b/style.css
@@ -11,12 +11,6 @@ html {
   box-sizing: border-box;
 }
 
-.input-container {
-  flex-grow: 1;
-  flex-shrink: 0;
-  flex-basis: 300px;
-}
-
 @media (width <= 1100px) {
   aside {
     display: none;
@@ -40,11 +34,12 @@ body {
 #form-card{
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   background-color: white;
-  display: flex;
-  justify-content: start;
-  flex-direction: row;
-  flex-wrap: wrap;
   padding: 3rem;
+  display: grid;
+  grid-template: repeat(3, 1fr) / repeat(2, 1fr);
+}
+
+.input-container {
 }
 
 form > * {
